--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -57,8 +57,8 @@
         android:layout_marginTop="100dp"
         android:background="@drawable/red_left"
         app:layout_constrainedWidth="true"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintEnd_toStartOf="@+id/cCenter"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -66,14 +66,14 @@
             android:id="@+id/clT_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingTop="5dp"
-            android:textSize="14sp"
-            android:layout_marginStart="10dp"
             android:text="左侧投左侧投投s左侧侧投s左侧侧投s左侧侧"
-            app:layout_constraintEnd_toStartOf="@+id/clT_2"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/clT_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,12 +85,12 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="13dp"
-            app:layout_constraintEnd_toStartOf="@+id/clT_3"
             android:text="34%"
-            tools:visibility="visible"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/clT_3"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/clT_3"
@@ -99,8 +99,38 @@
             android:layout_marginStart="13dp"
             android:text="✔️"
             android:textSize="18sp"
-            tools:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cCenter"
+        android:layout_width="58dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="33dp"
+            android:layout_height="48dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/red_coner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="33dp"
+            android:layout_height="48dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/pur_coner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,39 +138,16 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cCenter"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="100dp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:src="@drawable/red_coner"
-            android:layout_width="33dp"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="48dp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cR"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="100dp"
+        android:background="@drawable/pur_right"
         app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/cCenter"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
@@ -148,14 +155,14 @@
             android:id="@+id/clT_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingTop="5dp"
-            android:textSize="14sp"
-            android:layout_marginStart="10dp"
             android:text="右侧投右侧投右侧投右侧投右侧投右侧投"
-            app:layout_constraintEnd_toStartOf="@+id/clT_5"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/clT_5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -167,12 +174,12 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="13dp"
-            app:layout_constraintEnd_toStartOf="@+id/clT_6"
             android:text="34%"
-            tools:visibility="visible"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/clT_6"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/clT_6"
@@ -181,14 +188,13 @@
             android:layout_marginStart="13dp"
             android:text="✔️"
             android:textSize="18sp"
-            tools:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -197,7 +203,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
-
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -225,8 +230,8 @@
             android:id="@+id/tv_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_toStartOf="@+id/tv_nice_text"
             android:ellipsize="end"
@@ -245,7 +250,6 @@
             android:textSize="18sp" />
 
     </com.mao.jetpack.widget.PartView>
-
 
 
     <com.mao.jetpack.widget.PartView
@@ -278,8 +282,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/tv_nice_text_right_1"
             android:layout_marginStart="13dp"
+            android:layout_toStartOf="@+id/tv_nice_text_right_1"
             android:text="34%"
             android:textSize="18sp" />
 
@@ -292,8 +296,8 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="13dp"
             android:text="✔️"
-            tools:visibility="visible"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:visibility="visible" />
 
     </com.mao.jetpack.widget.PartView>
 
