id:deeplink 如果链接是正确的，就可以跳转到对应的app,同时可以获取到对应的参数

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -41,13 +41,33 @@
         app:iconPadding="4dp"
         android:layout_marginStart="10dp"
         app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn"
         app:layout_constraintTop_toTopOf="parent"
         tools:icon="@drawable/icon_cell_like"
         tools:iconTint="@color/color_3d3"
         tools:text="跳转room"
         tools:textColor="@color/color_3d3" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnRoomJ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转app"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:backgroundTint="#ffffff"
+        app:cornerRadius="0dp"
+        app:icon="@drawable/icon_cell_like"
+        app:iconGravity="textStart"
+        app:iconPadding="4dp"
+        android:layout_marginStart="10dp"
+        app:iconTint="@color/color_theme"
+        app:layout_constraintStart_toEndOf="@+id/btnRoom"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:icon="@drawable/icon_cell_like"
+        tools:iconTint="@color/color_3d3"
+        tools:textColor="@color/color_3d3" />
+
 
     <WebView
         android:id="@+id/webview"
