--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="color_divider">#f2f2f2</color>
     <color name="black">#000000</color>
     <color name="transparent">@android:color/transparent</color>
+    <color name="colorBookMark">#FFD600</color>
 </resources>
