--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="ConstraintLayout2.0"
+        android:text="MotionLayout"
         app:backgroundTint="@color/color_theme"
         app:cornerRadius="0dp"
         app:iconGravity="textStart"
