--- a/app/src/main/res/layout/activity_constraint_end_m.xml
+++ b/app/src/main/res/layout/activity_constraint_end_m.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ConstraintSetExample">
+    tools:context=".ui.motionlayout.ConstraintSetExample">
 
     <View
         android:id="@+id/background"
