--- a/app/src/main/res/layout/activity_motion_layout_m.xml
+++ b/app/src/main/res/layout/activity_motion_layout_m.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root"
-    tools:context=".ui.motionlayout.ConstraintSetExample">
-
+    app:layoutDescription="@xml/scene_motion_layout_xml"
+    tools:context=".ui.motionlayout.MotionActivity">
 
     <View
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -23,12 +23,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
         android:contentDescription="@null"
+        android:scaleType="fitXY"
         android:src="@drawable/film_cover"
-        app:layout_constraintTop_toTopOf="@+id/background"
         app:layout_constraintBottom_toBottomOf="@+id/background"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/background" />
 
     <TextView
         android:id="@+id/text_film_title"
@@ -44,13 +44,13 @@
     <RatingBar
         android:id="@+id/rating_film_rating"
         style="?attr/ratingBarStyleSmall"
-        android:numStars="5"
-        android:progressTint="@color/colorBookMark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:numStars="5"
         android:paddingVertical="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_film_title"
-        app:layout_constraintStart_toStartOf="@+id/text_film_title" />
+        android:progressTint="@color/colorBookMark"
+        app:layout_constraintStart_toStartOf="@+id/text_film_title"
+        app:layout_constraintTop_toBottomOf="@id/text_film_title" />
 
 
     <TextView
@@ -70,21 +70,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="16dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/film_description_title" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_favourite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_bookmark_24dp"
         android:tint="@color/colorBookMark"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="@id/background"
-        app:layout_constraintTop_toBottomOf="@id/background"
-        app:fabSize="mini" />
+        app:layout_constraintEnd_toEndOf="@id/background"
+        app:layout_constraintStart_toStartOf="@id/background"
+        app:layout_constraintTop_toBottomOf="@id/background" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
