--- a/app/src/main/res/layout/activity_motion_sample_layout.xml
+++ b/app/src/main/res/layout/activity_motion_sample_layout.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/sample_one"
+    app:layoutDescription="@xml/sample_two_image_filter"
     app:showPaths="true"
     tools:context=".ui.motionlayout.MotionSampleActivity">
 
-    <!-- <androidx.constraintlayout.utils.widget.ImageFilterView
+    <!--MotionLayout  自带的控件 调节图片图片饱和度  和 色温-->
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/avatar"
+        tools:ignore="MissingConstraints" />
+
+
+    <!-- <View
          android:id="@+id/view"
-         android:src="@drawable/avatar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/colorAccent"
          tools:ignore="MissingConstraints" />-->
-
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
